--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -1,12 +1,14 @@
 .characterEditor {
   padding-top: 128px;
   padding-bottom: 64px;
+  position: relative;
 }
 
 .maxWidthWrapper {
 }
 
 .header {
+  width: 65%;
   padding-bottom: 64px;
 }
 
@@ -24,7 +26,20 @@
 }
 
 .characterWrapper {
+  position: fixed;
+  top: 128px;
+  right: 15%;
+  height: 85%;
 }
 
 .controlColumn {
+  width: 50%;
+}
+
+.bgDecoration {
+  position: absolute;
+  bottom: -40%;
+  height: 100%;
+  background-color: hsl(195deg, 20%, 86%);
+  width: 100%;
 }
